# reduce_image_size

./: README.md  pyproject.toml  resize.py
